añadidos factoreds de accesibilidad

--- a/HTML/club.html
+++ b/HTML/club.html
@@ -7,41 +7,42 @@
     <title>The Club</title>
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
-
 <body>
     <header>
         <div class="banner_verde">
-            <a href="/HTML/index.html">
-                <img class="header_img" src="/public/assets/imgs/logotipo_negro.svg" alt="">
+            <a title="enlace a home" href="/HTML/index.html">
+                <img class="header_img" src="/public/assets/imgs/logotipo_negro.svg" alt="logotipo de EivissaPadel">
             </a>
             <div id="desktop_menu">
-                <a href="/HTML/socios.html" class="link_button desktop_show orange_btn" id="boton_miembro">
+                <a title="enlace a socios" href="/HTML/socios.html" class="link_button desktop_show orange_btn"
+                    id="boton_miembro">
                     ¡Hazte Miembro!
                 </a>
-                <a href="/HTML/socios.html" class="link_button desktop_show" id="boton_identificate">
-                    <img src="/public/assets/icons/Customer.svg" alt="">
+                <a title="enlace a socios" href="/HTML/socios.html" class="link_button desktop_show"
+                    id="boton_identificate">
+                    <img src="/public/assets/icons/Customer.svg" alt="icono de cliente">
                     Identifícate
                 </a>
-                <a href="#" class="carrito">
-                    <img src="/public/assets/icons/Shopping_Basket.svg" alt="">
+                <a title="enlace a carrito (work in progress)" href="#" class="carrito">
+                    <img src="/public/assets/icons/Shopping_Basket.svg" alt="icono de carrito de la compra">
                 </a>
             </div>
-            <a href="/HTML/socios.html">
-                <img class="desktop_hide" src="/public/assets/icons/Customer.svg" alt="">
+            <a title="enlace a socios" href="/HTML/socios.html">
+                <img class="desktop_hide" src="/public/assets/icons/Customer.svg" alt="icono de cliente">
             </a>
-            <img class="desktop_hide" src="/public/assets/icons/Menu.svg" alt="">
+            <img class="desktop_hide" src="/public/assets/icons/Menu.svg" alt="icono de menu de hamburguesa">
             <input class="desktop_hide" type="checkbox" name="menu_mobile" id="menu_mobile">
             <div class="nav_mobile">
                 <div class="close">X
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="/HTML/club.html">El Club</a></li>
-                        <li><a href="/HTML/tienda.html">Tienda</a></li>
-                        <li><a href="#">Reserva</a></li>
-                        <li><a href="#">Clases</a></li>
-                        <li><a href="#">Contacto</a></li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a title="enlace a club" href="/HTML/club.html">El Club</a></li>
+                        <li><a title="enlace a tienda" href="/HTML/tienda.html">Tienda</a></li>
+                        <li><a title="enlace a reserva (work in progress)" href="#">Reserva</a></li>
+                        <li><a title="enlace a clases (work in progress)" href="#">Clases</a></li>
+                        <li><a title="enlace a contacto (work in progress)" href="#">Contacto</a></li>
+                        <li><a title="enlace a blog (work in progress)" href="#">Blog</a></li>
                     </ul>
                 </nav>
             </div>
@@ -102,7 +103,7 @@
                 </p>
             </div>
         </section>
-        <a href="/HTML/socios.html" class="blue_btn link_button">¡Quiero ser Socio!</a>
+        <a title="enlace a socios" href="/HTML/socios.html" class="blue_btn link_button">¡Quiero ser Socio!</a>
         <section class="organizacion">
             <h2>¿Como estamos organizados?</h2>
             <div class="cinco_fotos">
@@ -176,13 +177,17 @@
     <footer>
         <div class="footer_container">
             <div id="links">
-                <a href="#"> <img src="/public/assets/icons/YouTube.png" alt="">
+                <a title="enlace a red social (work in progress)" href="#"> <img src="/public/assets/icons/YouTube.png"
+                        alt="">
                 </a>
-                <a href="#"> <img src="/public/assets/icons/Instagram.png" alt="">
+                <a title="enlace a red social (work in progress)" href="#"> <img
+                        src="/public/assets/icons/Instagram.png" alt="">
                 </a>
-                <a href="#"> <img src="/public/assets/icons/TwitterX.png" alt="">
+                <a title="enlace a red social (work in progress)" href="#"> <img src="/public/assets/icons/TwitterX.png"
+                        alt="">
                 </a>
-                <a href="#"> <img src="/public/assets/icons/Facebook.png" alt="">
+                <a title="enlace a red social (work in progress)" href="#"> <img src="/public/assets/icons/Facebook.png"
+                        alt="">
                 </a>
             </div>
             <div class="footer_desktop">
