--- a/HTML/tienda.html
+++ b/HTML/tienda.html
@@ -11,37 +11,39 @@
 <body>
     <header>
         <div class="banner_verde">
-            <a href="/HTML/index.html">
-                <img class="header_img" src="/public/assets/imgs/logotipo_negro.svg" alt="">
+            <a title="enlace a home" href="/HTML/index.html">
+                <img class="header_img" src="/public/assets/imgs/logotipo_negro.svg" alt="logotipo de EivissaPadel">
             </a>
             <div id="desktop_menu">
-                <a href="/HTML/socios.html" class="link_button desktop_show orange_btn" id="boton_miembro">
+                <a title="enlace a socios" href="/HTML/socios.html" class="link_button desktop_show orange_btn"
+                    id="boton_miembro">
                     ¡Hazte Miembro!
                 </a>
-                <a href="/HTML/socios.html" class="link_button desktop_show" id="boton_identificate">
-                    <img src="/public/assets/icons/Customer.svg" alt="">
+                <a title="enlace a socios" href="/HTML/socios.html" class="link_button desktop_show"
+                    id="boton_identificate">
+                    <img src="/public/assets/icons/Customer.svg" alt="icono de cliente">
                     Identifícate
                 </a>
-                <a href="#" class="carrito">
-                    <img src="/public/assets/icons/Shopping_Basket.svg" alt="">
+                <a title="enlace a carrito (work in progress)" href="#" class="carrito">
+                    <img src="/public/assets/icons/Shopping_Basket.svg" alt="icono de carrito de la compra">
                 </a>
             </div>
-            <a href="/HTML/socios.html">
-                <img class="desktop_hide" src="/public/assets/icons/Customer.svg" alt="">
+            <a title="enlace a socios" href="/HTML/socios.html">
+                <img class="desktop_hide" src="/public/assets/icons/Customer.svg" alt="icono de cliente">
             </a>
-            <img class="desktop_hide" src="/public/assets/icons/Menu.svg" alt="">
+            <img class="desktop_hide" src="/public/assets/icons/Menu.svg" alt="icono de menu de hamburguesa">
             <input class="desktop_hide" type="checkbox" name="menu_mobile" id="menu_mobile">
             <div class="nav_mobile">
                 <div class="close">X
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="/HTML/club.html">El Club</a></li>
-                        <li><a href="/HTML/tienda.html">Tienda</a></li>
-                        <li><a href="#">Reserva</a></li>
-                        <li><a href="#">Clases</a></li>
-                        <li><a href="#">Contacto</a></li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a title="enlace a club" href="/HTML/club.html">El Club</a></li>
+                        <li><a title="enlace a tienda" href="/HTML/tienda.html">Tienda</a></li>
+                        <li><a title="enlace a reserva (work in progress)" href="#">Reserva</a></li>
+                        <li><a title="enlace a clases (work in progress)" href="#">Clases</a></li>
+                        <li><a title="enlace a contacto (work in progress)" href="#">Contacto</a></li>
+                        <li><a title="enlace a blog (work in progress)" href="#">Blog</a></li>
                     </ul>
                 </nav>
             </div>
@@ -66,8 +68,8 @@
     <main id="tienda">
         <div class="busqueda">
             <input placeholder="Busca aquí tu producto..." id="buscador" type="text" class="text">
-            <a href="#">
-                <img id="lupa" src="/public/assets/icons/Search.svg" alt="">
+            <a title="buscar (work in progress)" href="#">
+                <img id="lupa" src="/public/assets/icons/Search.svg" alt="lupa">
             </a>
         </div>
         <div class="categorias desktop_hide">
@@ -76,43 +78,43 @@
             <img class="arrow_down" src="/public/assets/icons/SortDown.svg" alt="">
             <div class="categorias_lista">
                 <ul>
-                    <li><a href="#">OFERTAS</a></li>
-                    <li><a href="#">TENIS</a></li>
-                    <li><a href="#">PALAS</a></li>
-                    <li><a href="#">RAQUETAS</a></li>
-                    <li><a href="#">BOLSAS</a></li>
-                    <li><a href="#">CALZADO</a></li>
-                    <li><a href="#">ACCESORIOS Y COMPLEMENTOS</a></li>
+                    <li><a title="enlace a ofertas (work in progress)" href="#">OFERTAS</a></li>
+                    <li><a title="enlace a categoria tenias (work in progress)" href="#">TENIS</a></li>
+                    <li><a title="enlace a categorias palas (work in progress)" href="#">PALAS</a></li>
+                    <li><a title="enlace a categorias raquetas (work in progress)" href="#">RAQUETAS</a></li>
+                    <li><a title="enlace a categoria bolsas (work in progress)" href="#">BOLSAS</a></li>
+                    <li><a title="enlace a categoria calzados (work in progress)" href="#">CALZADO</a></li>
+                    <li><a title="enlace a categoria accesorios y complementos (work in progress)" href="#">ACCESORIOS Y COMPLEMENTOS</a></li>
                 </ul>
             </div>
         </div>
         <div class="desktop_show categorias_desktop">
             <ul>
-                <li><a href="#">OFERTAS</a></li>
-                <li><a href="#">TENIS</a></li>
-                <li><a href="#">PALAS</a></li>
-                <li><a href="#">RAQUETAS</a></li>
-                <li><a href="#">BOLSAS</a></li>
-                <li><a href="#">CALZADO</a></li>
-                <li><a href="#">ACCESORIOS Y COMPLEMENTOS</a></li>
+                <li><a title="enlace a categoria ofertas (work in progress) " href="#">OFERTAS</a></li>
+                <li><a title="enlace a categoria tenis (work in progress)" href="#">TENIS</a></li>
+                <li><a title="enlace a categoria palas (work in progress)" href="#">PALAS</a></li>
+                <li><a title="enlace a categoria raquetas (work in progress)" href="#">RAQUETAS</a></li>
+                <li><a title="enlace a categoria bolsas (work in progress)" href="#">BOLSAS</a></li>
+                <li><a title="enlace a categoria calzados (work in progress)" href="#">CALZADO</a></li>
+                <li><a title="enlace a categoria accesorios y complementos (work in progress)" href="#">ACCESORIOS Y COMPLEMENTOS</a></li>
             </ul>
         </div>
         <div class="ofertas">
-            <a href="#" class="oferta1">
+            <a title="enlace a oferta (work in progress)" href="#" class="oferta1">
                 <div class="texto_oferta">¡Oferta!</div>
                 <div class="precio_oferta">
                     <p>88€</p>
                     <p>25€</p>
                 </div>
             </a>
-            <a href="#" class="oferta2">
+            <a title="enlace a oferta (work in progress)" href="#" class="oferta2">
                 <div class="texto_oferta">¡Oferta!</div>
                 <div class="precio_oferta">
                     <p>55€</p>
                     <p>20€</p>
                 </div>
             </a>
-            <a href="#" class="oferta3 desktop_show">
+            <a title="enlace a oferta (work in progress)" href="#" class="oferta3 desktop_show">
                 <div class="texto_oferta">¡Oferta!</div>
                 <div class="precio_oferta">
                     <p>15€</p>
@@ -123,7 +125,7 @@
         <section class="ultimos_productos">
             <h2>Últimos Productos</h2>
             <div class="banner_desktop">
-                <a href="#" class="banner banner_three">
+                <a title="enlace a producto (work in progress)" href="#" class="banner banner_three">
                     <h4 class="encabezado_tienda desktop_hide">Pack: 3 Pelotas</h4>
                     <div class="sub_banner sub_banner_three">
                         <h4 class="titulo_mini desktop_show">Pack de 3 pelotas</h4>
@@ -137,7 +139,7 @@
                         </p>
                     </div>
                 </a>
-                <a href="#" class="banner banner_three">
+                <a title="enlace a producto (work in progress)" href="#" class="banner banner_three">
                     <h4 class="encabezado_tienda desktop_hide">Pala de Pádel</h4>
                     <div class="sub_banner sub_banner_three">
                         <h4 class="titulo_mini desktop_show">Pala Pro de Padel</h4>
@@ -150,7 +152,7 @@
                             categoría, así que no dejes pasar este ofertón, ¡no pasan a menudo!</p>
                     </div>
                 </a>
-                <a href="#" class="banner banner_three desktop_show">
+                <a title="enlace a producto (work in progress)" href="#" class="banner banner_three desktop_show">
                     <h4 class="encabezado_tienda desktop_hide">Camiseta Blanca</h4>
                     <div class="sub_banner sub_banner_three">
                         <h4 class="titulo_mini desktop_show">Camiseta blanca</h4>
@@ -167,19 +169,23 @@
             </div>
         </section>
         <div class="orange_100_btn">
-            <a href="#" class="link_button orange_btn">¡Vende tu producto!</a>
+            <a title="enlace a vende tu producto (work in progress)" href="#" class="link_button orange_btn">¡Vende tu producto!</a>
         </div>
     </main>
     <footer>
         <div class="footer_container">
             <div id="links">
-                <a href="#"> <img src="/public/assets/icons/YouTube.png" alt="">
+                <a title="enlace a red social (work in progress)" href="#"> <img src="/public/assets/icons/YouTube.png"
+                        alt="">
                 </a>
-                <a href="#"> <img src="/public/assets/icons/Instagram.png" alt="">
+                <a title="enlace a red social (work in progress)" href="#"> <img
+                        src="/public/assets/icons/Instagram.png" alt="">
                 </a>
-                <a href="#"> <img src="/public/assets/icons/TwitterX.png" alt="">
+                <a title="enlace a red social (work in progress)" href="#"> <img src="/public/assets/icons/TwitterX.png"
+                        alt="">
                 </a>
-                <a href="#"> <img src="/public/assets/icons/Facebook.png" alt="">
+                <a title="enlace a red social (work in progress)" href="#"> <img src="/public/assets/icons/Facebook.png"
+                        alt="">
                 </a>
             </div>
             <div class="footer_desktop">
