--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,37 +11,39 @@
 <body>
     <header>
         <div class="banner_verde">
-            <a href="/HTML/index.html">
-                <img class="header_img" src="/public/assets/imgs/logotipo_negro.svg" alt="">
+            <a title="enlace a home" href="/HTML/index.html">
+                <img class="header_img" src="/public/assets/imgs/logotipo_negro.svg" alt="logotipo de EivissaPadel">
             </a>
             <div id="desktop_menu">
-                <a href="/HTML/socios.html" class="link_button desktop_show orange_btn" id="boton_miembro">
+                <a title="enlace a socios" href="/HTML/socios.html" class="link_button desktop_show orange_btn"
+                    id="boton_miembro">
                     ¡Hazte Miembro!
                 </a>
-                <a href="/HTML/socios.html" class="link_button desktop_show" id="boton_identificate">
-                    <img src="/public/assets/icons/Customer.svg" alt="">
+                <a title="enlace a socios" href="/HTML/socios.html" class="link_button desktop_show"
+                    id="boton_identificate">
+                    <img src="/public/assets/icons/Customer.svg" alt="icono de cliente">
                     Identifícate
                 </a>
-                <a href="#" class="carrito">
-                    <img src="/public/assets/icons/Shopping_Basket.svg" alt="">
+                <a title="enlace a carrito (work in progress)" href="#" class="carrito">
+                    <img src="/public/assets/icons/Shopping_Basket.svg" alt="icono de carrito de la compra">
                 </a>
             </div>
-            <a href="/HTML/socios.html">
-                <img class="desktop_hide" src="/public/assets/icons/Customer.svg" alt="">
+            <a title="enlace a socios" href="/HTML/socios.html">
+                <img class="desktop_hide" src="/public/assets/icons/Customer.svg" alt="icono de cliente">
             </a>
-            <img class="desktop_hide" src="/public/assets/icons/Menu.svg" alt="">
+            <img class="desktop_hide" src="/public/assets/icons/Menu.svg" alt="icono de menu de hamburguesa">
             <input class="desktop_hide" type="checkbox" name="menu_mobile" id="menu_mobile">
             <div class="nav_mobile">
                 <div class="close">X
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="/HTML/club.html">El Club</a></li>
-                        <li><a href="/HTML/tienda.html">Tienda</a></li>
-                        <li><a href="#">Reserva</a></li>
-                        <li><a href="#">Clases</a></li>
-                        <li><a href="#">Contacto</a></li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a title="enlace a club" href="/HTML/club.html">El Club</a></li>
+                        <li><a title="enlace a tienda" href="/HTML/tienda.html">Tienda</a></li>
+                        <li><a title="enlace a reserva (work in progress)" href="#">Reserva</a></li>
+                        <li><a title="enlace a clases (work in progress)" href="#">Clases</a></li>
+                        <li><a title="enlace a contacto (work in progress)" href="#">Contacto</a></li>
+                        <li><a title="enlace a blog (work in progress)" href="#">Blog</a></li>
                     </ul>
                 </nav>
             </div>
@@ -66,15 +68,15 @@
     <main id="home">
         <section id="home_socios">
             <div id="socios_btn" class="desktop_hide dos_botones">
-                <a href="/HTML/socios.html" class="link_button blue_btn">Inicia Sesión</a>
-                <a href="/HTML/socios.html" class="link_button blue_btn">Hazte Miembro</a>
+                <a title="enlace a socios" href="/HTML/socios.html" class="link_button blue_btn">Inicia Sesión</a>
+                <a title="enlace a socios" href="/HTML/socios.html" class="link_button blue_btn">Hazte Miembro</a>
             </div>
             <h3 class="desktop_hide">Ventajas de ser miembro</h3>
             <p class="desktop_show">¡Bienvenidos a EivissaPadel! Si aún no eres miembro de nuestro club, descubre
                 las ventajas e
                 inscríbete a
                 continuación</p>
-            <a href="/HTML/socios.html">
+            <a title="enlace a socios" href="/HTML/socios.html">
                 <div class="banner" id="miembro_banner">
                     <div id="miembro_texto_banner" class="sub_banner">
                         <h2 class="desktop_show">Ventajas miembros</h2>
@@ -93,7 +95,7 @@
             <p>En EivissaPadel organizamos eventos regularmente para concienciar a la comunidad sobre el medioambiente e
                 incentivar el estilo de vida deportivo.</p>
             <div class="banner_desktop">
-                <a href="#" class="banner banner_three eventos_banner">
+                <a title="enlace a eventos (work in progress)" href="#" class="banner banner_three eventos_banner">
                     <div class="eventos_texto_banner sub_banner_three sub_banner">
                         <h4 class="titulo_mini">Recogida Popular</h4>
                         <p>
@@ -106,7 +108,7 @@
                         </p>
                     </div>
                 </a>
-                <a href="#" class="banner banner_three eventos_banner desktop_show">
+                <a title="enlace a eventos (work in progress)" href="#" class="banner banner_three eventos_banner desktop_show">
                     <div class="eventos_texto_banner sub_banner sub_banner_three">
                         <h4 class="titulo_mini">Torneo Solidario</h4>
                         <p>
@@ -118,7 +120,7 @@
                         </p>
                     </div>
                 </a>
-                <a href="#" class="banner banner_three eventos_banner desktop_show">
+                <a title="enlace a eventos (work in progress)" href="#" class="banner banner_three eventos_banner desktop_show">
                     <div class="eventos_texto_banner sub_banner sub_banner_three">
                         <h4 class="titulo_mini">Limpiando Juntos</h4>
                         <p>
@@ -141,7 +143,7 @@
             <p>En nuestra tienda encontrarás todos los productos vendidos por los socios en su mejor calidad.</p>
             <h3 class="desktop_show">Últimos productos a la venta</h3>
             <div class="banner_desktop">
-                <a href="/HTML/tienda.html" id="banner_home_tienda" class="banner banner_three">
+                <a title="enlace a tienda" href="/HTML/tienda.html" id="banner_home_tienda" class="banner banner_three">
                     <div class="sub_banner sub_banner_three">
                         <h4 class="desktop_hide titulo_mini">Último producto a la venta</h4>
                         <h4 class="titulo_mini desktop_show">Pack de 3 pelotas</h4>
@@ -155,7 +157,7 @@
                         </p>
                     </div>
                 </a>
-                <a href="/HTML/tienda.html" class="banner banner_three desktop_show">
+                <a title="enlace a tienda" href="/HTML/tienda.html" class="banner banner_three desktop_show">
                     <div class="sub_banner sub_banner_three">
                         <h4 class="titulo_mini">Pala Pro de Padel</h4>
                         <p>
@@ -167,7 +169,7 @@
                             categoría, así que no dejes pasar este ofertón, ¡no pasan a menudo!</p>
                     </div>
                 </a>
-                <a href="/HTML/tienda.html" class="banner banner_three desktop_show">
+                <a title="enlace a tienda" href="/HTML/tienda.html" class="banner banner_three desktop_show">
                     <div class="sub_banner sub_banner_three">
                         <h4 class="titulo_mini">Camiseta blanca</h4>
                         <p>
@@ -184,18 +186,18 @@
             </div>
         </section>
         <div id="reserva_clases" class="dos_botones">
-            <a href="#" class="link_button blue_btn">Reserva Pista</a>
-            <a href="#" class="link_button blue_btn">Clases</a>
+            <a title="enlace a reservar pista (work in progress)" href="#" class="link_button blue_btn">Reserva Pista</a>
+            <a title="enlace a clases (work in progress)" href="#" class="link_button blue_btn">Clases</a>
         </div>
         <section id="home_club">
             <h2>El Club</h2>
             <div id="botones_dedo">
                 <div class="imagen_club desktop_show">
                 </div>
-                <a href="/HTML/club.html#asociacion" class="link_button">
+                <a title="enlace al apartado la asociacion del club" href="/HTML/club.html#asociacion" class="link_button">
                     <p>La asociación</p><img src="/public/assets/icons/HandCursor.svg" alt="">
                 </a>
-                <a href="/HTML/club.html#compromiso_medioambiental" class="link_button">
+                <a title="enlace al compromiso medioambiental del club" href="/HTML/club.html#compromiso_medioambiental" class="link_button">
                     <p> Compromiso <br>medioambiental</p><img src="/public/assets/icons/HandCursor.svg" alt="">
                 </a>
             </div>
@@ -204,7 +206,7 @@
             <h2>Blog</h2>
             <p>¡Entérate de todo en nuestro blog!</p>
             <div class="banner_desktop">
-                <a href="#" class="banner banner_three">
+                <a title="enlace al blog (work in progress)" href="#" class="banner banner_three">
                     <div class="home_blog_img"></div>
                     <div class="home_blog_texto sub_banner sub_banner_three">
                         <p>¡Siguen llegando miembros!</p>
@@ -214,7 +216,7 @@
                             integrantes hacen que cualquier bache en el camino...</p>
                     </div>
                 </a>
-                <a href="#" class="banner banner_three desktop_show">
+                <a title="enlace al blog (work in progress)" href="#" class="banner banner_three desktop_show">
                     <div class="home_blog_img"></div>
                     <div class="home_blog_texto sub_banner sub_banner_three">
                         <p>¡Éxito en el PadelFest!
@@ -228,19 +230,19 @@
             </div>
         </section>
         <div class="orange_100_btn">
-            <a href="#" class="link_button orange_btn">Contáctanos</a>
+            <a title="enlace a contactanos (work in progress)" href="#" class="link_button orange_btn">Contáctanos</a>
         </div>
     </main>
     <footer>
         <div class="footer_container">
             <div id="links">
-                <a href="#"> <img src="/public/assets/icons/YouTube.png" alt="">
+                <a title="enlace a red social (work in progress)" href="#"> <img src="/public/assets/icons/YouTube.png" alt="">
                 </a>
-                <a href="#"> <img src="/public/assets/icons/Instagram.png" alt="">
+                <a title="enlace a red social (work in progress)" href="#"> <img src="/public/assets/icons/Instagram.png" alt="">
                 </a>
-                <a href="#"> <img src="/public/assets/icons/TwitterX.png" alt="">
+                <a title="enlace a red social (work in progress)" href="#"> <img src="/public/assets/icons/TwitterX.png" alt="">
                 </a>
-                <a href="#"> <img src="/public/assets/icons/Facebook.png" alt="">
+                <a title="enlace a red social (work in progress)" href="#"> <img src="/public/assets/icons/Facebook.png" alt="">
                 </a>
             </div>
             <div class="footer_desktop">
